--- a/css/header.css
+++ b/css/header.css
@@ -1,8 +1,7 @@
 .container {
-    display: grid;
-    grid-template-columns: 100px 200px;
-    grid-gap: 20px 30px;
-    grid-template-rows: 100px
+max-width: 900px;
+padding: 20px;
+margin: 0 auto;
 }
 
 .container__item {
