--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,12 @@
-.element{
-    max-width: 500px;
+html {
+    box-sizing: border-box;
+}
+
+*,::after,::before {
+    box-sizing: inherit;
+}
+
+body {
+    font-family: 'Montserrat', sans-serif;
+    background: #eee;
 }
