--- a/css/tasks.css
+++ b/css/tasks.css
@@ -1,26 +1,54 @@
 .tasks {
-    list-style: none;
     margin: 0;
-    padding: 0;
+    list-style: none;
 }
+
+.tasks__button {
+    color: white; 
+    width: 30px;
+    height: 30px;
+    border: none;
+}
+
+.tasks__button:hover {
+    background-color: green
+  }
+  .tasks__button:active {
+    background-color: green
+  }
+
+.tasks__button--done {
+    background: #0de70d;
+    transition: 1.4s;
+}
+
+.tasks__button--remove {
+    background: #e60838;
+    transition: 3s;
+}
+
+.tasks__button--remove:hover {
+    background-color: red
+  }
+  
+  .tasks__button--remove:active {
+    background-color: red
+  }
 
 .tasks__item {
     display: grid;
-    grid-template-columns: auto 1 fr auto;
+    grid-template-columns: auto 1fr auto;
     grid-gap: 10px;
+    border-bottom: 1px solid #ddd;
     align-items: center;
     padding: 10px;
-    border-bottom: 1px solid #ddd;
+    padding-left: 0;
+  }
+
+.tasks__item--hidden {
+  display: none;
 }
 
 .tasks__content--done {
     text-decoration: line-through;
-}
-
-.tasks__button {
-    border: none;
-    color: white;
-    width: 30px;
-    height: 30px;
-    padding: 0;
 }
