--- a/css/form.css
+++ b/css/form.css
@@ -1,7 +1,7 @@
 .form {
     width: 80%;
     margin: 0 auto;
-    display: flex;
+    display: grid;
     flex-direction: column;
     background-color: white;
   }
@@ -39,6 +39,5 @@
   }
   
   .form__button:hover {
-    transform: scale(1.05);
     background-color: hsl(180, 100%, 30%);
   }
