--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,12 @@ html {
     box-sizing: inherit;
 }
 
-body {
-    font-family: 'Montserrat', sans-serif;
-    background: #eee;
+.body {
+    font-family: Montserrat, sans-serif;
+    line-height: 1.5;
+    background-color: #eee;
+    max-width: 1000px;
+    margin: 0 auto;
+    word-break: break-word;
 }
+
