--- a/css/header.css
+++ b/css/header.css
@@ -1,12 +1,3 @@
-.container {
-max-width: 900px;
-padding: 20px;
-margin: 0 auto;
-}
-
-.container__item {
-    display: flex;
-    align-items: center;
-    padding: 20px;
-    justify-content: center;
+.header{
+    margin: 50px 20px 0px 20px;
 }
