--- a/css/section.css
+++ b/css/section.css
@@ -1,31 +1,58 @@
 .section {
-    margin: 10px 0;
     background-color: white;
-    box-shadow: 0 0 5px #ddd;
+    margin-top: 10px;
 }
 
-.section__body {
-    padding: 10px;
+.section--tasks {
+    min-height: 180px;
 }
 
 .section__header {
-    border-bottom: 1px solid #ddd;
-    display: grid;
-    grid-template-columns: auto auto;
-    grid-gap: 20px;
-    justify-content: space-between;
-    align-items: center;
-    font-size: 20px;
     padding: 20px;
+    margin: 0;
+    border-bottom: solid 2px #e0e0e0;
 }
 
-@media (max-width: 767px) {
-    .section__header {
+.section__header-second {
+    border: none;
+}
+
+.section__container {
+    display: grid;
+    grid-template-columns: 1fr auto auto;
+    border-bottom: solid 2px #e0e0e0;
+}
+
+@media (max-width: 768px) {
+    .section__container {
         grid-template-columns: 1fr;
     }
 }
 
-.section__title {
-    font-size: 20px;
-    margin: 0;
+.section__buttonsContainer {
+    align-self: center;
+    
+}
+@media (max-width: 768px) {
+    .section__buttonsContainer {
+        display: grid;
+        grid-template-columns: 1fr;
+    }
+}
+
+.section__button {
+    color: teal;
+    background: none;
+    border: none;
+    padding: 20px;
+    font-size: 18px;
+    transition: color 1s;
+}
+
+.section__button:hover {
+    color: hsl(180, 100%, 35%);
+}
+
+.section__button:disabled{
+    color: #e0e0e0;
 }
